Slight styling tweak to prevent overflow on the right edge in composite upload dialog.

--- a/client/galaxy/style/less/upload.less
+++ b/client/galaxy/style/less/upload.less
@@ -174,7 +174,7 @@
         background: lighten(@btn-default-border, 30%);
         .upload-row {
             .upload-title {
-                width: 190px;
+                width: 175px;
             }
             .upload-source {
                 .ui-button-menu {
